infra/k8s/istio-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-api
spec:
  rules:
    - from:
        - source:
            principals:
              - spiffe://zypto/api
